project compiles! dependencies as es6 modules. debugging updated FOLD library broke pattern parseSVG

--- a/package.json
+++ b/package.json
@@ -1,19 +1,9 @@
 {
-  "name": "origami-simulator",
+  "name": "OrigamiSimulator",
   "version": "0.0.1",
   "description": "",
   "main": "origami-simulator.js",
-  "keywords": [
-    "svg",
-    "line",
-    "segment",
-    "path",
-    "simplify",
-    "divide",
-    "convert",
-    "fragment",
-    "vector"
-  ],
+  "keywords": [],
   "author": "Amanda Ghassaei",
   "license": "MIT",
   "repository": "https://github.com/amandaghassaei/OrigamiSimulator",
