--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-plugin-import": "^2.17.3",
     "rollup": "^1.12.4",
     "rollup-plugin-babel-minify": "^8.0.0",
-    "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-cleanup": "^3.1.1"
+    "rollup-plugin-cleanup": "^3.1.1",
+    "rollup-plugin-string": "^3.0.0"
   }
 }
